Fade sidebar to avoid flicker when the next page is rendered

--- a/_sass/arco.scss
+++ b/_sass/arco.scss
@@ -90,36 +90,6 @@ blockquote {
     height: auto;
 }
 
-@keyframes fade-out {
-    from { 
-        opacity: 1
-    }
-
-    to {
-        opacity: 0
-    }
-}
-
-@keyframes fade-in {
-    from { 
-        opacity: 0
-    }
-    
-    to {
-        opacity: 1
-    }
-}
-
-#fader.fade-out {
-    opacity: 0;
-    animation-name: fade-out;
-}
-
-#fader.fade-in {
-    opacity: 1;
-    animation-name: fade-in;
-}
-
 .footer {
     flex-shrink: 0;
 }
